# lang-app

./: .gitignore  CMakeLists.txt  README.md  calc.g4  gram.g4
parser-calc/: CMakeLists.txt  calc.cpp  calc.h  calc.interp  calcBaseVisitor.cpp  calcBaseVisitor.h  calcLexer.cpp  calcLexer.h  calcLexer.interp  calcParser.cpp  calcParser.h  calcUserVisitor.cpp  calcUserVisitor.h  calcVisitor.cpp  calcVisitor.h
parser-gram/: CmakeLists.txt  gram.cpp  gram.h  gram.interp  gram.tokens  gramBaseVisitor.h  gramLexer.cpp  gramLexer.h  gramLexer.interp  gramParser.cpp  gramParser.h  gramUserVisitor.cpp  gramUserVisitor.h  gramVisitor.h
ref/: CMakeLists.txt  refCalc.cpp  refCalc.h
sample/: CMakeLists.txt  main.cpp
